--- a/resistance/app/views/games/index.html.erb
+++ b/resistance/app/views/games/index.html.erb
@@ -1,4 +1,7 @@
 <h1>games index</h1>
+<% @joinable_games.each do |game| %>
+  <div><%= link_to "#{game.}"  %></div>
+<% end %>
 
 <%= link_to "Create new game"  %>
 
