--- a/resistance/app/views/games/index.html.erb
+++ b/resistance/app/views/games/index.html.erb
@@ -1,6 +1,6 @@
 <h1>games index</h1>
 <% @joinable_games.each do |game| %>
-  <div><%= link_to "#{game}"  %></div>
+  <div><%= link_to "#{game.game_name}", game_path(game)  %></div>
 <% end %>
 
 <%= link_to "Create new game"  %>
