fixes bug w/ cable.yml file

--- a/resistance/app/views/games/index.html.erb
+++ b/resistance/app/views/games/index.html.erb
@@ -3,6 +3,6 @@
   <div><%= link_to "#{game.game_name}", game_path(game)  %></div>
 <% end %>
 
-<%= link_to "Create new game"  %>
+<%= link_to "Create new game", new_game_path  %>
 
 
