adds game creator nickname field to games#new form

--- a/resistance/app/views/games/_form.html.erb
+++ b/resistance/app/views/games/_form.html.erb
@@ -7,6 +7,10 @@
     <%= f.text_field :game_name  %>
   </div>
   <div>
+    <%= label_tag(name='creator nickname')  %>
+    <%= text_field_tag 'creator_nickname'  %>
+  </div>
+  <div>
     <%= f.label :game_key  %>
     <%= f.text_field :game_key  %>
   </div>
