--- a/resistance/app/views/games/show.html.erb
+++ b/resistance/app/views/games/show.html.erb
@@ -2,3 +2,31 @@
 
 <h2><%= @game.game_name  %></h2>
 <h2>Created by: <%= @game.game_name  %></h2>
+<br><br><br>
+<div>
+  <p>current players</p>
+  <ul>
+    <% @game.players.each do |player| %>
+      <li><%= player.name %></li>
+    <% end %>
+  </ul>
+</div>
+<div>
+  <p>submit game key and nickname to join this game</p>
+  <%= form_for @player do |f|  %>
+    <%= hidden_field_tag 'game_id', @game.id  %>
+    <p>
+      <%= label_tag(name='game_key')  %>
+      <%= text_field_tag 'game_key'  %>
+    </p>
+    <p>
+      <%= label_tag(name='player_nickname')  %>
+      <%= text_field_tag 'player_nickname'  %>
+    </p>
+    <p>
+      <%=  submit_tag 'join' %>
+    </p>
+
+  <% end %>
+</div>
+
