--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -1,1 +1,13 @@
 <h1>Game Room</h1>
+
+<p>
+  <button id='button-1'>button 1</button>
+</p>
+
+<p>
+  <button id="button-2">button 2</button>
+</p>
+
+<p>
+  <button id="button-3">button 3</button>
+</p>
