creates controlle for game upon hitting game_room.erb

--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -13,5 +13,7 @@
 </p>
 
 <%= javascript_tag do %>
-  initializeSubscription();
+  $(document).ready(function(){
+    initializeSubscription();
+  });
 <% end %>
