game controller initialized with correct gameID and playerID

--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -1,4 +1,4 @@
-<h1 id="game-room", data-room-id="<%= @game.id  %>">Game Room</h1>
+<h1 id="game-room", data-room-id="<%= @game.id  %>", data-player-id="<%= @player.id  %>">Game Room</h1>
 
 <p>
   <button id='button-1'>button 1</button>
