adds playable boolean field to games, adds start game button to game room

--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -22,6 +22,10 @@
   </ul>
 </div>
 
+<div id="start-game-section" class="hidden">
+  <button id='start-game'>start game</button>
+</div>
+
 
 <%= javascript_tag do %>
   $(document).ready(function(){
