adds functioning GameController.addPlayer(), li text decorations need fixing

--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -29,6 +29,7 @@
 
 <%= javascript_tag do %>
   $(document).ready(function(){
+    console.log('hello')
     initializeSubscription();
   });
 <% end %>
