--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -1,30 +1,38 @@
 <h1 id="game-room", data-room-id="<%= @game.id  %>", data-player-id="<%= @player.id  %>">Game Room</h1>
 
-<p>
-  <button id='button-1'>button 1</button>
-</p>
 
-<p>
-  <button id="button-2">button 2</button>
-</p>
+<div id="waiting-to-start-container">
+  <p>
+    <button id='button-1'>button 1</button>
+  </p>
 
-<p>
-  <button id="button-3">button 3</button>
-</p>
+  <p>
+    <button id="button-2">button 2</button>
+  </p>
+
+  <p>
+    <button id="button-3">button 3</button>
+  </p>
 
 
-<div id='waiting-players-section'>
-  <h2 >players</h2>
-  <ul id='waiting-players-list'>
-    <% @game.players.each do |player| %>
-      <p><%= player.name  %></p>
-    <% end %>
-  </ul>
+  <div id='waiting-players-section'>
+    <h2 >players</h2>
+    <ul id='waiting-players-list'>
+      <% @game.players.each do |player| %>
+        <p><%= player.name  %></p>
+      <% end %>
+    </ul>
+  </div>
+
+  <div id="start-game-section" class="hidden">
+    <button id='start-game'>start game</button>
+  </div>
 </div>
 
-<div id="start-game-section" class="hidden">
-  <button id='start-game'>start game</button>
+<div id="game-in-play" class='hidden'>
+  <h2>game in play section</h2>
 </div>
+
 
 
 <%= javascript_tag do %>
