adds hiding of wfp section and showing of game play section in GameController#startGame

--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -29,8 +29,11 @@
   </div>
 </div>
 
-<div id="game-in-play" class='hidden'>
+<div id="game-in-play-container" class='hidden'>
   <h2>game in play section</h2>
+  <div id="round-leader-team-selection-container">
+    <h2 class='hidden' >in round leader selection container</h2>
+  </div>
 </div>
 
 
