--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -31,8 +31,8 @@
 
 <div id="game-in-play-container" class='hidden'>
   <h2>game in play section</h2>
-  <div id="round-leader-team-selection-container">
-    <h2 class='hidden' >in round leader selection container</h2>
+  <div id="round-leader-team-selection-container" class='hidden'>
+    <h2>in round leader selection container</h2>
   </div>
 </div>
 
