passes check_box_partial to broadcast job correctly

--- a/resistance/app/views/games/_team_selection_check_box.html.erb
+++ b/resistance/app/views/games/_team_selection_check_box.html.erb
@@ -1,7 +1,7 @@
 <h1>partial form</h1>
 
 <%= form_tag('/team_mbrs', ) do %>
-  <% @team_members.each do |player|  %>
+  <% team_members.each do |player|  %>
     <li>
       <input type='checkbox' name='team_member_ids[]' value=<%= player.id  %> id="team-member_<%= player.id  %>">
       <%= player.name %>
