adds numCheckedBoxes function

--- a/resistance/app/views/games/_team_selection_check_box.html.erb
+++ b/resistance/app/views/games/_team_selection_check_box.html.erb
@@ -1,7 +1,7 @@
 <h1>partial form</h1>
 <% game ||= @game %>
 <div id="team-checkbox-container" data-num-players-needed= <%= game.current_mission.member_count %>>
-  <%= form_tag('/team_mbrs', ) do %>
+  <%= form_tag('/team_mbrs' ) do %>
     <% team_members.each do |player|  %>
       <li>
         <input type='checkbox' name='team_member_ids[]' value=<%= player.id  %> id="team-member_<%= player.id  %>" class="pick-team-checkbox">
