adds functioning listeners for checkbox and form submit - logic for num teammates enforced

--- a/resistance/app/views/games/game_room.html.erb
+++ b/resistance/app/views/games/game_room.html.erb
@@ -34,6 +34,7 @@
   <div id="round-leader-team-selection-container" class='hidden'>
     <h2>in round leader selection container</h2>
   </div>
+  <div id="go-nogo-vote-container"></div>
 </div>
 
 
